tests/baselines/reference/structExtendsItselfIndirectly2.errors.txt
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendsItselfIndirectly2.ts(22,2): error TS1010: '*/' expected.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendsItselfIndirectly2.ts(1,8): error TS2310: Type 'C' recursively references itself as a base type.


==== tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendsItselfIndirectly2.ts (2 errors) ====
    struct C extends N.E { foo: string; } // error
           ~
!!! error TS2310: Type 'C' recursively references itself as a base type.
    
    module M {
        export struct D extends C { bar: string; }
    
    }
    
    module N {
        export struct E extends M.D { baz: number; }
    }
    
    /* module O {
        struct C2<T> extends Q.E2<T> { foo: T; } // error
    
        module P {
            export struct D2<T> extends C2<T> { bar: T; }
        }
    
        module Q {
            export struct E2<T> extends P.D2<T> { baz: T; }
        }
    }
     
!!! error TS1010: '*/' expected.